[project]
name = "hello"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "D. Delmar Davis", email = "suspectdevices.com" }
]
dependencies = [
    "flet>=0.84.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.84.0",
    "flet-desktop>=0.84.0",
    "flet-web>=0.84.0",
]

[tool.flet]
org = "com.suspectdevices.com"
product = "hello"
company = "Suspect Devices"
copyright = "Copyright (C) 2023-2026 by D Delmar Davis"

[tool.flet.app]
path = "src"
